--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
     "dotenv": "^17.2.3",
-    "firebase": "^10.12.0"
+    "firebase": "^10.12.0",
+    "googleapis": "^167.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
