--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,14 @@
-# FirebaseConfig
-FIREBASE_API_KEY=your_api_key_here
-FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-FIREBASE_APP_ID=your_app_id
-FIREBASE_MEASUREMENT_ID=your_measurement_id
+# Firebase 配置
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=1234567890
+VITE_FIREBASE_APP_ID=1:1234567890:web:abc123def456ghi789
 
-# Gmail SMTP 配置
-GMAIL_USER=your-email@gmail.com
-GMAIL_PASS=your-app-password  # 使用Gmail应用专用密码，不是常规密码
+# 管理员账号配置
+VITE_ADMIN_USERNAME=admin_username_here
+VITE_ADMIN_PASSWORD=admin_password_here
 
-# 服务器配置
-PORT=3001
-API_BASE_URL=http://localhost:3001/api
-NODE_ENV=development  # 开发环境
-
-# Gmail API 配置
-GMAIL_CLIENT_ID=你的客户端ID.apps.googleusercontent.com
-GMAIL_CLIENT_SECRET=你的客户端密钥
-GMAIL_REFRESH_TOKEN=你的刷新令牌
-FROM_EMAIL=你的Gmail邮箱@gmail.com
+# 应用环境
+NODE_ENV=development
