--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
   "name": "monkeypocket",
   "version": "1.0.0",
-  "description": "monkeypocket",
+  "description": "Monkey Pocket - 魔法百宝袋管理系统",
+  "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "server": "cd server && npx deno run --allow-net --allow-read --allow-env server.ts",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack",
+    "build:dev": "cross-env NODE_ENV=development webpack",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.86.2",
-    "dotenv": "^17.2.3",
-    "firebase": "^10.12.0",
-    "googleapis": "^167.0.0"
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "babel-loader": "^10.0.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "concurrently": "^8.2.2",
-    "crypto-browserify": "^3.12.1",
-    "css-loader": "^6.11.0",
-    "dotenv-webpack": "^8.1.1",
-    "html-webpack-plugin": "^5.6.5",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.4",
-    "util": "^0.12.5",
-    "vm-browserify": "^1.1.2",
-    "webpack": "^5.103.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^4.15.1"
   }
 }
