--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "firebase": "^10.7.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
