--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-# Firebase 配置
-VITE_FIREBASE_API_KEY=your_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=1234567890
-VITE_FIREBASE_APP_ID=1:1234567890:web:abc123def456ghi789
+FIREBASE_API_KEY=apiKey
+FIREBASE_AUTH_DOMAIN=authDomain
+FIREBASE_PROJECT_ID=projectId
+FIREBASE_STORAGE_BUCKET=storageBucket
+FIREBASE_MESSAGING_SENDER_ID=messagingSenderId
+FIREBASE_APP_ID=appId
 
 # 管理员账号配置
-VITE_ADMIN_USERNAME=admin_username_here
-VITE_ADMIN_PASSWORD=admin_password_here
+ADMIN_USERNAME=admin_username_here
+ADMIN_PASSWORD=admin_password_here
 
 # 应用环境
 NODE_ENV=development
